--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+#Test Wedding App
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+*As a user, I can create a login and profile on the website
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+*As a user, I can include the following information in my profile:
+- name
+- username
+- email
+- location
+- role in the wedding
+- password
+- total wedding budget
+- an avatar or user picture
