--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 #Test Wedding App
 
-*As a user, I can create a login (username and password) on the website
+*As a user, I can create a login (username and password) on the website.
 
 *As a user, I can create a profile and include the following information in my profile:
 - name
@@ -10,4 +10,19 @@
 - role in the wedding
 - password
 - total wedding budget
-- an avatar or user picture
+
+*As a user, I can login or join from the front page, and see who is logged in on every page.
+
+
+
+
+
+
+Next
+*As a user, I can edit/update or delete my profile.
+
+*As a user, I can search for other users and view their profiles.
+
+*As a user, I can add a picture to my profile.
+
+*As a user, I can connect my profile with another user's profile (mutually), to compare our Wedding Budget Priorities
